# Matrix-printing

./: .gitignore  Cargo.toml  README.md  build.rs  matrix_printing_gui.py  matrix_printing_logic.py  matrix_settings.json
config/: 作文本.json  小方格.json  小方格A4.json
src/: app.rs  logic.rs  main.rs
tests/: test_matrix_printing_logic.py
