[package]
name = "matrix-printing-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp"] }
fontdue = "0.9"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
